# libsqlora8

./: CMakeLists.txt  README.md  libsqlora8-config.h  sqlora.c  sqlora.h  sqlora_compat.c  testlora.c
cmake/: FindOCI8.cmake
